--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -57,9 +57,9 @@ services:
       LOG_LEVEL: debug
     entrypoint: /wait-for-erigon.sh
     ports:
-      - 40400:40400/tcp
-      - 40400:40400/udp
-      - 8080:8080
+      - "40400:40400/tcp"
+      - "40400:40400/udp"
+      - "8080:8081"
     networks:
       - node
     volumes:
