--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -55,7 +55,8 @@ services:
       VALIDATOR_PRIVATE_KEY: $VALIDATOR_PRIVATE_KEY
       P2P_IP: $P2P_IP
       LOG_LEVEL: debug
-    entrypoint: /wait-for-erigon.sh
+    entrypoint: >
+      sh -c '/wait-for-erigon.sh && node --no-warnings /usr/src/yarn-project/aztec/dest/bin/index.js start --port 8081 --network alpha-testnet --node --archiver --sequencer'
     ports:
       - "40400:40400/tcp"
       - "40400:40400/udp"
