--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,9 +11,6 @@ services:
       - "30303:30303/tcp" # P2P TCP
       - "30303:30303/udp" # P2P UDP
       - "4000:4000/tcp"   # Caplin TCP
-      - "8545:8545/tcp"   # HTTP RPC
-      - "8546:8546/tcp"   # WebSocket
-      - "5555:5555/tcp"   # Beacon API
     command:
       - --chain=sepolia
       - --prune.mode=minimal
@@ -31,6 +28,7 @@ services:
       - --beacon.api.cors.allow-origins=*
       - --beacon.api=beacon,builder,config,debug,node,lighthouse
       - --private.api.addr=127.0.0.1:9070
+      - --caplin.blobs-immediate-backfill=true
       - --db.size.limit=200GB
       - --state.cache=512
       - --metrics
@@ -54,14 +52,14 @@ services:
       DATA_DIRECTORY: /data
       VALIDATOR_PRIVATE_KEY: $VALIDATOR_PRIVATE_KEY
       P2P_IP: $P2P_IP
-      AZTEC_PORT: 8081
+      AZTEC_PORT: 8080
       LOG_LEVEL: debug
     entrypoint: >
-      sh -c '/wait-for-erigon.sh && node --no-warnings /usr/src/yarn-project/aztec/dest/bin/index.js start --port 8081 --network alpha-testnet --node --archiver --sequencer'
+      sh -c '/wait-for-erigon.sh && node --no-warnings /usr/src/yarn-project/aztec/dest/bin/index.js start --network alpha-testnet --node --archiver --sequencer'
     ports:
       - "40400:40400/tcp"
       - "40400:40400/udp"
-      - "8080:8081"
+      - "8080:8080"
     networks:
       - node
     volumes:
@@ -80,8 +78,6 @@ services:
       - node
     volumes:
       - ./data/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-    ports:
-      - "9090:9090"
 
   grafana:
     image: grafana/grafana:latest
@@ -105,8 +101,6 @@ services:
     image: grafana/loki:2.8.0
     container_name: loki
     hostname: loki
-    ports:
-      - "3200:3200"
     networks:
       - node
     volumes:
